@@ -1,0 +1,9 @@
+CC="cc"
+CXX="CC"
+F77="ftn"
+FC="ftn"
+CFLAGS="-target=$XTPE_COMPILE_TARGET"
+CXXFLAGS="-target=$XTPE_COMPILE_TARGET"
+FFLAGS="-target=$XTPE_COMPILE_TARGET"
+FCFLAGS="-target=$XTPE_COMPILE_TARGET"
+with_mpich2="yes"
